# ent/ogent/oas_router_gen.go
@@ -248,7 +248,7 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 			}
 
 			if len(elem) == 0 {
-				s.handleUpdateUsersRequest([1]string{
+				s.handleMarkDoneRequest([1]string{
 					args[0],
 				}, w, r)
 
@@ -263,17 +263,37 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				}
 
 				// Param: "id"
-				// Leaf parameter
-				args[0] = elem
-				elem = ""
+				// Match until "/"
+				idx := strings.IndexByte(elem, '/')
+				if idx < 0 {
+					idx = len(elem)
+				}
+				args[0] = elem[:idx]
+				elem = elem[idx:]
 
 				if len(elem) == 0 {
-					// Leaf: UpdateTodo
 					s.handleUpdateTodoRequest([1]string{
 						args[0],
 					}, w, r)
 
 					return
+				}
+				switch elem[0] {
+				case '/': // Prefix: "/done"
+					if l := len("/done"); len(elem) >= l && elem[0:l] == "/done" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf: MarkDone
+						s.handleMarkDoneRequest([1]string{
+							args[0],
+						}, w, r)
+
+						return
+					}
 				}
 			case 'u': // Prefix: "users/"
 				if l := len("users/"); len(elem) >= l && elem[0:l] == "users/" {
@@ -283,17 +303,68 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				}
 
 				// Param: "id"
-				// Leaf parameter
-				args[0] = elem
-				elem = ""
+				// Match until "/"
+				idx := strings.IndexByte(elem, '/')
+				if idx < 0 {
+					idx = len(elem)
+				}
+				args[0] = elem[:idx]
+				elem = elem[idx:]
 
 				if len(elem) == 0 {
-					// Leaf: UpdateUsers
 					s.handleUpdateUsersRequest([1]string{
 						args[0],
 					}, w, r)
 
 					return
+				}
+				switch elem[0] {
+				case '/': // Prefix: "/"
+					if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						s.handleDrawStartRequest([1]string{
+							args[0],
+						}, w, r)
+
+						return
+					}
+					switch elem[0] {
+					case 'd': // Prefix: "d"
+						if l := len("d"); len(elem) >= l && elem[0:l] == "d" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf: DrawDone
+							s.handleDrawDoneRequest([1]string{
+								args[0],
+							}, w, r)
+
+							return
+						}
+					case 's': // Prefix: "start"
+						if l := len("start"); len(elem) >= l && elem[0:l] == "start" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf: DrawStart
+							s.handleDrawStartRequest([1]string{
+								args[0],
+							}, w, r)
+
+							return
+						}
+					}
 				}
 			}
 		}
@@ -535,7 +606,7 @@ func (s *Server) FindRoute(method, path string) (r Route, _ bool) {
 			}
 
 			if len(elem) == 0 {
-				r.name = "UpdateUsers"
+				r.name = "MarkDone"
 				r.args = args
 				r.count = 0
 				return r, true
@@ -549,16 +620,35 @@ func (s *Server) FindRoute(method, path string) (r Route, _ bool) {
 				}
 
 				// Param: "id"
-				// Leaf parameter
-				args[0] = elem
-				elem = ""
+				// Match until "/"
+				idx := strings.IndexByte(elem, '/')
+				if idx < 0 {
+					idx = len(elem)
+				}
+				args[0] = elem[:idx]
+				elem = elem[idx:]
 
 				if len(elem) == 0 {
-					// Leaf: UpdateTodo
 					r.name = "UpdateTodo"
 					r.args = args
 					r.count = 1
 					return r, true
+				}
+				switch elem[0] {
+				case '/': // Prefix: "/done"
+					if l := len("/done"); len(elem) >= l && elem[0:l] == "/done" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf: MarkDone
+						r.name = "MarkDone"
+						r.args = args
+						r.count = 1
+						return r, true
+					}
 				}
 			case 'u': // Prefix: "users/"
 				if l := len("users/"); len(elem) >= l && elem[0:l] == "users/" {
@@ -568,16 +658,64 @@ func (s *Server) FindRoute(method, path string) (r Route, _ bool) {
 				}
 
 				// Param: "id"
-				// Leaf parameter
-				args[0] = elem
-				elem = ""
+				// Match until "/"
+				idx := strings.IndexByte(elem, '/')
+				if idx < 0 {
+					idx = len(elem)
+				}
+				args[0] = elem[:idx]
+				elem = elem[idx:]
 
 				if len(elem) == 0 {
-					// Leaf: UpdateUsers
 					r.name = "UpdateUsers"
 					r.args = args
 					r.count = 1
 					return r, true
+				}
+				switch elem[0] {
+				case '/': // Prefix: "/"
+					if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						r.name = "DrawStart"
+						r.args = args
+						r.count = 1
+						return r, true
+					}
+					switch elem[0] {
+					case 'd': // Prefix: "d"
+						if l := len("d"); len(elem) >= l && elem[0:l] == "d" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf: DrawDone
+							r.name = "DrawDone"
+							r.args = args
+							r.count = 1
+							return r, true
+						}
+					case 's': // Prefix: "start"
+						if l := len("start"); len(elem) >= l && elem[0:l] == "start" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf: DrawStart
+							r.name = "DrawStart"
+							r.args = args
+							r.count = 1
+							return r, true
+						}
+					}
 				}
 			}
 		}
